frostwire (4.21.7) stable; urgency=high

  * Fixes a bug when migrating from an older version of FrostWire on which
    previously Saved and individually shared files would still be shared
    after not sharing finished downloads on the migration wizard.
  * Fixes a bug on configuration screens that could make the application
    freeze for a few seconds before moving towards the next screen.
  * Migration wizard will always be shown to make sure users are aware of
    what they're sharing. 
  * Sharing completed files is always set to off by default.
	
 -- FrostWire Team <contact@frostwire.com>  Thu, 16 May 2011 17:10:25 -0500

frostwire (4.21.6) stable; urgency=high

  * Fixes a bug where some Debian systems that didn't support the 
    Icon Tray would crash on startup.
  * Fixes a bug where running FrostWire for the very first time 
    (and later) display Uploads number -1 in the bottom status bar.
  * UX improvement Junk & Block. When marking Junk Results 
    UI offers to block malicious hosts that haven't blocked already.
  * Policy update, Incomplete files are not shared by default to avoid
    sharing files you started downloading and didn't want.
  * Policy update, Finished downloads are not shared by default to
    avoid confusion between files on Shared folder versus files
    on Save folder.
  * Policy update, .torrent files are not shared by default.
  * UX improvement, better explanation and option to turn on/off
    individual sharing of finished downloads (that end up in Saved
    Folder) during FrostWire setup wizard.
  * UX improvement, when user turns off Finished Download sharing
    those files that were shared as individual files inside
    the 'Saved Folder' will not be shared anymore.
  * UX improvement, File menu now has option to Exit FrostWire completely.
  * UX improvement, File menu now says "Open Torrent/Magnet" instead
    of "Download Torrent/Magnet" for clarity.
  * Bug Fix: The Torrent Save folder is now considered correctly,